--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+62 81261461479</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -836,7 +836,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>ptravyy@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -879,7 +879,6 @@
       </div>
 
     </section><!-- /Contact Section -->
-
   </main>
 
   <footer id="footer" class="footer dark-background">
